redid some error reporting fixed broken form on ios

--- a/source/components/moneys/moneys.module.scss
+++ b/source/components/moneys/moneys.module.scss
@@ -4,6 +4,7 @@
 .moneys {
   text-align: right;
   margin-bottom: 40px;
+  user-select: none;
 
   h1 {
     @include font-size-lg;
