--- a/source/components/stock/stock.module.scss
+++ b/source/components/stock/stock.module.scss
@@ -2,6 +2,9 @@
 @import "../../scss/mixins";
 
 .stock {
+  user-select: none;
+  cursor: default;
+
   tr {
     transition: transform 0.3s $ease-out;
   }
