--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -5,7 +5,6 @@
 :before,
 :after {
   box-sizing: border-box;
-  user-select: none;
   outline: none;
 }
 
